--- a/EN/index.html
+++ b/EN/index.html
@@ -7,7 +7,7 @@
     <title>OTASYNC</title>
     <link rel="icon" href="https://admin.otasync.me/img/ota_b.png">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/style.min.css?v=105">
+    <link rel="stylesheet" type="text/css" href="css/style.min.css?v=106">
     <!-- Plugins -->
     <script type="text/javascript" src="js/plugins/jquery.js"></script>
     <script type="text/javascript" src="js/plugins/datepicker.js"></script>
@@ -17,36 +17,35 @@
 
     <script type="text/javascript" src="js/plugins/jquery.range.js"></script>
     <!-- Scripts -->
-    <script type="text/javascript" src="js/global.js?v=105"></script>
-    <script type="text/javascript" src="js/input.js?v=105"></script>
-    <script type="text/javascript" src="js/navigation.js?v=105"></script>
-    <script type="text/javascript" src="js/home.js?v=105"></script>
-    <script type="text/javascript" src="js/login.js?v=105"></script>
-    <script type="text/javascript" src="js/reservations.js?v=105"></script>
-    <script type="text/javascript" src="js/guests.js?v=105"></script>
-    <script type="text/javascript" src="js/invoices.js?v=105"></script>
-    <script type="text/javascript" src="js/fiscal.js?v=105"></script>
-    <script type="text/javascript" src="js/changes.js?v=105"></script>
-    <script type="text/javascript" src="js/restrictions.js?v=105"></script>
-    <script type="text/javascript" src="js/yield.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/articles.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/emails.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/engine.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/general.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/prices.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/rooms.js?v=105"></script>
-    <script type="text/javascript" src="js/settings/users.js?v=105"></script>
-    <script type="text/javascript" src="js/forms/reservation.js?v=105"></script>
-    <script type="text/javascript" src="js/forms/group.js?v=105"></script>
-    <script type="text/javascript" src="js/forms/guest.js?v=105"></script>
-    <script type="text/javascript" src="js/forms/invoice.js?v=105"></script>
-    <script type="text/javascript" src="js/forms/user.js?v=105"></script>
+    <script type="text/javascript" src="js/global.js?v=106"></script>
+    <script type="text/javascript" src="js/input.js?v=106"></script>
+    <script type="text/javascript" src="js/navigation.js?v=106"></script>
+    <script type="text/javascript" src="js/home.js?v=106"></script>
+    <script type="text/javascript" src="js/login.js?v=106"></script>
+    <script type="text/javascript" src="js/reservations.js?v=106"></script>
+    <script type="text/javascript" src="js/guests.js?v=106"></script>
+    <script type="text/javascript" src="js/invoices.js?v=106"></script>
+    <script type="text/javascript" src="js/fiscal.js?v=106"></script>
+    <script type="text/javascript" src="js/changes.js?v=106"></script>
+    <script type="text/javascript" src="js/restrictions.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/articles.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/emails.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/engine.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/general.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/prices.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/rooms.js?v=106"></script>
+    <script type="text/javascript" src="js/settings/users.js?v=106"></script>
+    <script type="text/javascript" src="js/forms/reservation.js?v=106"></script>
+    <script type="text/javascript" src="js/forms/group.js?v=106"></script>
+    <script type="text/javascript" src="js/forms/guest.js?v=106"></script>
+    <script type="text/javascript" src="js/forms/invoice.js?v=106"></script>
+    <script type="text/javascript" src="js/forms/user.js?v=106"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-    <script type="text/javascript" src="js/statistics.js?v=105"></script>
-    <script type="text/javascript" src="js/info.js?v=105"></script>
-    <script type="text/javascript" src="js/calendar.js?v=105"></script>
-    <script type="text/javascript" src="js/search.js?v=105"></script>
-    <script type="text/javascript" src="js/reports.js?v=105"></script>
+    <script type="text/javascript" src="js/statistics.js?v=106"></script>
+    <script type="text/javascript" src="js/info.js?v=106"></script>
+    <script type="text/javascript" src="js/calendar.js?v=106"></script>
+    <script type="text/javascript" src="js/search.js?v=106"></script>
+    <script type="text/javascript" src="js/reports.js?v=106"></script>
 
     <!--changelog skripta-->
 
@@ -2207,6 +2206,10 @@
                 <input placeholder="SWIFT" type="text" class='text_input' name="property_swift" id="property_swift" autocomplete="off">
                 <label for="property_swift">SWIFT</label>
               </div>
+            </div>
+            <div class='flex_between'>
+              <div> Property email </div>
+              <input type='text' class='text_input' id='property_email'>
             </div>
             <div class='flex_between'>
               <div> In VAT system </div>
